--- a/myapp/templates/alumni_list.html
+++ b/myapp/templates/alumni_list.html
@@ -49,7 +49,7 @@
                     class="fas fa-user text-light fa-lg mr-3"></i>Interview Experience</a></li>
               <li class="nav-item"><a href="{% url 'profile' session_id %}" class="nav-link text-white p-2 mb-2"><i
                     class="fas fa-user text-light fa-lg mr-3"></i>Create Profile</a></li>
-              <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i
+              <li class="nav-item"><a href="{% url 'update_profile' session_id %}" class="nav-link text-white p-2 mb-2"><i
                     class="fas fa-id-card text-light fa-lg mr-3"></i>Update Profile</a></li>
               
               <!-- <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i class="fas fa-file-alt text-light fa-lg mr-3"></i></a></li> -->
