--- a/myapp/templates/welcome_msg.html
+++ b/myapp/templates/welcome_msg.html
@@ -1,3 +1,8 @@
+{% if message %}
+<script>
+  alert('{{ message }}');
+</script>
+{% endif %}
 <!doctype html>
 <html lang="en">
 
@@ -39,19 +44,21 @@
                     class="fas fa-home text-light fa-lg mr-3"></i>Home</a></li>
               <li class="nav-item"><a href="{% url 'alumni_list' session_id %}" class="nav-link text-white p-2 mb-2"><i
                     class="fas fa-user text-light fa-lg mr-3"></i>Alumni List</a></li>
-              <li class="nav-item"><a href="{% url 'notification_history' session_id %}" class="nav-link text-white p-2 mb-2"><i
-                    class="fas fa-envelope text-light fa-lg mr-3"></i>News and Events</a></li>
+              <li class="nav-item"><a href="{% url 'notification_history' session_id %}"
+                  class="nav-link text-white p-2 mb-2"><i class="fas fa-envelope text-light fa-lg mr-3"></i>News and
+                  Events</a></li>
               <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i
                     class="fas fa-id-card text-light fa-lg mr-3"></i>Job Opportunities</a></li>
               <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i
                     class="fas fa-envelope text-light fa-lg mr-3"></i>Message</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i
-                      class="fas fa-user text-light fa-lg mr-3"></i>Interview Experience</a></li>
+              <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i 
+                    class="fas fa-user text-light fa-lg mr-3"></i>Interview Experience</a></li>
               <li class="nav-item"><a href="{% url 'profile' session_id %}" class="nav-link text-white p-2 mb-2"><i
                     class="fas fa-user text-light fa-lg mr-3"></i>Create Profile</a></li>
-              <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i
-                    class="fas fa-id-card text-light fa-lg mr-3"></i>Update Profile</a></li>
-              
+              <li class="nav-item"><a href="{% url 'update_profile' session_id %}"
+                  class="nav-link text-white p-2 mb-2"><i class="fas fa-id-card text-light fa-lg mr-3"></i>Update
+                  Profile</a></li>
+
               <!-- <li class="nav-item"><a href="#" class="nav-link text-white p-2 mb-2"><i class="fas fa-file-alt text-light fa-lg mr-3"></i></a></li> -->
             </ul>
           </div>
@@ -107,24 +114,24 @@
   <!------Cards--->
 
 
-    <!------Pagination--->
+  <!------Pagination--->
 
-    <!------End of Footer--->
-
-
+  <!------End of Footer--->
 
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </body>
 <style>
   body {
