--- a/myapp/templates/st_notification_detail.html
+++ b/myapp/templates/st_notification_detail.html
@@ -68,11 +68,11 @@ and main content of the page -->
         </div>
         <div class="card-body">
           <p class="card-text">{{description}}</p>
-          <p class="card-text"><b>Start Date:</b>{{startdate}} </p>
-          <p class="card-text"><b>End Date:</b>{{enddate}} </p>
+          <p class="card-text"><b>Start Date:</b>  {{startdate}} </p>
+          <p class="card-text"><b>End Date:</b>    {{enddate}} </p>
         </div>
         <div class="card-footer text-muted">
-            </div><p> Attachment: {{att}}</p></div>
+            </div><p> Attachment: {{attachment}}</p></div>
           
         </div>
       </div>
