--- a/myapp/templates/alumni/alumni_login.html
+++ b/myapp/templates/alumni/alumni_login.html
@@ -27,7 +27,7 @@
 			<div class="col col-xl-10">
 			  <div class="card" style="border-radius: 1rem;">
 				<div class="row g-0">
-				<span class="h1 fw-bold mb-0"><marquee>AluminiHub</marquee></span>
+				<span class="h1 fw-bold mb-0"><marquee>AlumniHub</marquee></span>
 				  <div class="col-md-6 col-lg-5 d-none d-md-block">
 					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSH7nKXmKWbf7exEPwZv4ztR5YeRzHXk09zGg&usqp=CAU"
 					  alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem; margin-top: 40%; margin-left: 20%;"/>
