--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -6,18 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>AlumniHub - Let's Get Connected</title>
     <style>
       
       body {
-  margin:0;
-  padding:0;
-  font-family: sans-serif;
-  background: #7f0799;
-}
-              
-              
-              
+          margin:0;
+          padding:0;
+          font-family: sans-serif;
+          background: url('https://media.istockphoto.com/id/1447169162/photo/connected-lines-and-dots-on-dark-blue-background.jpg?b=1&s=170667a&w=0&k=20&c=A1xvlCqmmmXJJu0Fve7n0dZwNkFoZNEk-_3bpUkTazY=') no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;
+      }
+      
+      .card {
+          margin: auto;
+          margin-top: 50px;
+          text-align: center;
+      }
         
     </style>
 
@@ -25,58 +32,34 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-warning">
-        <a class="navbar-brand" href="#"></a>
+        <a class="navbar-brand" href="#">AlumniHub - Let's Get Connected</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <marquee behavior="" direction=""><h3>AlumniHub - Let's Get Connected </h3></marquee>
-          </div>
-        
       </nav>
       <br>
       <br>
       <br>
       <div class="profile mx-auto">
         <div class="container pt-6">
-      <div class="row">
-        <div class="col-sm-5">
-            
-          <div class="card">
-          
-            
-              <a href="{% url 'alumni_login' %}" class="btn btn-primary">Alumni</a>
-      
-      
+          <div class="row justify-content-center">
+            <div class="col-sm-4">
+              <div class="card">
+                <a href="{% url 'alumni_login' %}" class="btn btn-primary btn-lg">Alumni</a>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card">
+                <a href="{% url 'login' %}" class="btn btn-primary btn-lg">Student</a>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card">
+                <a href="{% url 'faculty_login' %}" class="btn btn-primary btn-lg">Faculty</a>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col-sm-5">
-          <div class="card ">
-            
-              
-              <a href="{% url 'login' %}" class="btn btn-primary">Student</a>
-              
-          
-          </div>
-        </div>
-        <div class="col-sm-5">
-          <div class="card ">
-            
-              
-              <a href="{% url 'faculty_login' %}" class="btn btn-primary">Faculty</a>
-              
-          
-          </div>
-        
-      </div>
-      </div>
       </div>
 </body>
-<style>
-  .card {
-    margin-left: 100px;
-    margin-top: 115px;
-    
-  }
-</style>
 </html>
