--- a/myapp/templates/Quizz_A/category_a.html
+++ b/myapp/templates/Quizz_A/category_a.html
@@ -27,6 +27,60 @@
 
 
 </style>
+<script>
+  
+    var sessionTimeout = 20000 // 20 seconds in milliseconds
+    var lastActivity = new Date().getTime();
+    console.log(lastActivity)
+  
+  
+    // Check for inactivity every second
+    var interval = setInterval(function () {
+      var currentTime = new Date().getTime();
+      console.log(currentTime)
+      var elapsedTime = currentTime - lastActivity;
+      console.log(elapsedTime)
+      if (elapsedTime > sessionTimeout) {
+        alert("Your session has expired. Please log in again.")
+        window.location.href = "/logout"; // Redirect to the logout URL
+      }
+    }, 1000);
+  
+    // Update last activity timestamp on user interaction
+    $(document).on('mousemove click scroll keydown', function () {
+      lastActivity = new Date().getTime();
+    });
+  
+    // Handle window unload event to store last activity timestamp
+    window.onbeforeunload = function () {
+      var lastloggedin= new Date().getTime();
+      window.location.href = "/logout";
+      fetch("http://localhost:8000/logout").then(res=>{console.log(res)}).catch(err=>{console.log(err)})
+      clearInterval(interval)
+      return "are u sure";
+  
+    };
+  window.addEventListener("unload", () => {
+  alert("CLOSING WINDOW");
+  localStorage.setItem('time', new Date().getTime());
+  
+  // Make a POST request to the logout view using AJAX
+  const xhr = new XMLHttpRequest();
+  xhr.open("POST", "/logout/");
+  xhr.setRequestHeader("Content-Type", "application/json");
+  xhr.setRequestHeader("X-CSRFToken", '{{ csrf_token }}');
+  xhr.onload = () => {
+    // Handle the response from the server
+    if (xhr.status === 200) {
+      // Redirect the user to the login page
+      window.location.href = "/login/";
+    } else {
+      console.error("Logout failed:", xhr.statusText);
+    }
+  };
+  xhr.send(JSON.stringify({}));
+  });
+  </script>
 
 
 <body>
